--- a/library.html
+++ b/library.html
@@ -30,8 +30,8 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-end toggler-text" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link menu-item" aria-current="page" href="index.html">Home</a>
-                        <a class="nav-link active menu-item" href="library.html">Library</a>
+                        <a class="nav-link menu-item" href="index.html">Home</a>
+                        <a class="nav-link active menu-item" aria-current="page" href="library.html">Library</a>
                         <a class="nav-link menu-item" href="contact.html">Contact</a>
                     </div>
                 </div>
@@ -45,23 +45,23 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <img src="assets/images/ssudan-young-boy-eating.jpg" width="612" height="408" class="d-block w-100"
-                                alt="A women with a camel in South Sudan refugee camp">
+                                alt="A young boy eating piece of fruit" aria-label="A photo of a young boy eating a piece of fruit" >
                         </div>
                         <div class="carousel-item">
                             <img src="assets/images/men-picking-up-scrap-metal.jpg" width="612" height="408" class="d-block w-100"
-                                alt="Men standing over scrap metal in a bare field">
+                                alt="Men standing over scrap metal in a bare field" aria-label="A photo of men standing over scrap metal in a bare field">
                         </div>
                         <div class="carousel-item">
                             <img src="assets/images/ssudan-woman-carrying-baby.jpg" width="612" height="408" class="d-block w-100"
-                                alt="A girl carrying a baby in a UN camp">
+                                alt="A girl carrying a baby in a UN camp" aria-label="A photo of a girl carrying a baby in a UN camp">
                         </div>
                         <div class="carousel-item">
                             <img src="assets/images/ssudan-man-in-hospital-bed.jpg" width="612" height="408" class="d-block w-100"
-                                alt="A man in a hospital bed in South Sudan">
+                                alt="A man in a hospital bed in South Sudan" aria-label="A photo of a man in a hospital bed in South Sudan">
                         </div>
                         <div class="carousel-item">
                             <img src="assets/images/african-artist-winni.jpg" width="612" height="408" class="d-block w-100"
-                                alt="African artist Winni performing on stage">
+                                alt="African artist Winni performing on stage" aria-label="A photo of African artist Winni performing on stage">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#library-carousel"
@@ -80,7 +80,7 @@
         </section>
         <section>
             <div class="row row-spacing">
-                <div class="col-sm-12 col-lg-4">
+                <div class="col-sm-6 col-lg-4">
                     <div class="card">
                         <iframe title="International Journalism Festival" width="auto" height="315" src="https://www.youtube.com/embed/y8LhUdpNkXg" allowfullscreen></iframe>
                         <div class="card-body">
@@ -91,7 +91,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-lg-4">
+                <div class="col-sm-6 col-lg-4">
                     <div class="card">
                         <iframe title="BBC News Report" width="auto" height="315" src="https://www.youtube.com/embed/feCZqPs8Gsc" allowfullscreen></iframe>
                         <div class="card-body">
@@ -101,7 +101,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-lg-4">
+                <div class="col-sm-6 col-lg-4">
                     <div class="card">
                         <iframe title="INews24 Report" width="auto" height="315" src="https://www.youtube.com/embed/7jHuyCTBpgw" allowfullscreen></iframe>
                         <div class="card-body">
@@ -210,8 +210,7 @@
                         <img src="assets/images/getty-images-logo.png" width="301" height="167" class="card-img-top card-logo"
                             alt="Getty Images Logo">
                         <div class="card-body">
-
-                            <p class="card-text">View more of Hannah's images here.</p>
+                            <h6 class="card-title">View more of Hannah's images here.</h6>
                             <a href="https://www.gettyimages.co.nz/photos/hannah-mcneish?family=editorial&phrase=hannah%20mcneish&sort=best#license"
                                 target="_blank" rel="noopener" class="btn btn-secondary">Getty Images</a>
                         </div>
@@ -222,8 +221,7 @@
                         <img src="assets/images/the-new-humanitarian-logo.png" width="279" height="181" class="card-img-top card-logo"
                             alt="The New Humanitarian Logo">
                         <div class="card-body">
-
-                            <p class="card-text">Read more of Hannah's article here.</p>
+                            <h6 class="card-title">Read more of Hannah's article here.</h6>
                             <a href="https://deeply.thenewhumanitarian.org/womensadvancement/contributor/hannah-mcneish"
                                 target="_blank" rel="noopener" class="btn btn-secondary">The New Humanitarian</a>
                         </div>
@@ -234,8 +232,7 @@
                     <div class="card">
                         <img src="assets/images/aljazeera-logo.png" width="284" height="177" class="card-img-top card-logo" alt="Aljazeera Logo">
                         <div class="card-body">
-
-                            <p class="card-text">Read more of Hannah's articles here.</p>
+                            <h6 class="card-title">Read more of Hannah's article here.</h6>
                             <a href="https://www.aljazeera.com/author/hannah_mc_neish_20131123102749244312"
                                 target="_blank" rel="noopener" class="btn btn-secondary">Aljazeera</a>
                         </div>
@@ -245,8 +242,7 @@
                     <div class="card">
                         <img src="assets/images/guardian-logo.png" width="286" height="176" class="card-img-top card-logo" alt="The Guardian Logo">
                         <div class="card-body">
-
-                            <p class="card-text">Read more of Hannah's articles here.</p>
+                            <h6 class="card-title">Read more of Hannah's article here.</h6>
                             <a href="https://www.theguardian.com/profile/hannah-mcneish" target="_blank" rel="noopener"
                                 class="btn btn-secondary">The Guardian</a>
                         </div>
@@ -256,9 +252,8 @@
                     <div class="card">
                         <img src="assets/images/reuters-logo.png" width="339" height="148" class="card-img-top card-logo" alt="Reuters Logo">
                         <div class="card-body">
-
-                            <p class="card-text">Read more of Hannah's articles here.</p>
-                            <a href="https://www.gettyimages.co.nz/photos/hannah-mcneish?family=editorial&phrase=hannah%20mcneish&sort=best#license"
+                            <h6 class="card-title">Read more of Hannah's article here.</h6>
+                            <a href="https://www.reuters.com/journalists/hannah-mcneish"
                                 target="_blank" rel="noopener" class="btn btn-secondary">Reuters</a>
                         </div>
                     </div>
@@ -268,8 +263,7 @@
                         <img src="assets/images/huffington-post-logo.png" width="286" height="176" class="card-img-top card-logo"
                             alt="The Huffington Post Logo">
                         <div class="card-body">
-
-                            <p class="card-text">Read more of Hannah's article here.</p>
+                            <h6 class="card-title">Read more of Hannah's article here.</h6>
                             <a href="https://www.huffpost.com/author/hannah-mcneish" target="_blank" rel="noopener"
                                 class="btn btn-secondary">Huffpost</a>
                         </div>
@@ -285,8 +279,7 @@
                         <img src="assets/images/voice-of-america-logo.png" width="254" height="198" class="card-img-top card-logo"
                             alt="Voice of America Logo">
                         <div class="card-body">
-
-                            <p class="card-text">Read more of Hannah's articles here.</p>
+                            <h6 class="card-title">Read more of Hannah's article here.</h6>
                             <a href="https://www.voanews.com/author/hannah-mcneish" target="_blank" rel="noopener"
                                 class="btn btn-secondary">Voice of America</a>
                         </div>
@@ -297,8 +290,7 @@
                         <img src="assets/images/iwmf-logo.png" width="225" height="225" class="card-img-top card-logo"
                             alt="International Women's Media Foundation Logo">
                         <div class="card-body">
-
-                            <p class="card-text">Read more of Hannah's articles here.</p>
+                            <h6 class="card-title">Read more of Hannah's article here.</h6>
                             <a href="https://www.iwmf.org/community/hannah-mcneish/" target="_blank" rel="noopener"
                                 class="btn btn-secondary">IWFM</a>
                         </div>
